--- a/src/components/Config/ConfigOption/ConfigOption.scss
+++ b/src/components/Config/ConfigOption/ConfigOption.scss
@@ -1,2 +1,24 @@
 .ConfigOption {
+  margin: 1rem;
+
+  &__input,
+  &__save {
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 4px;
+    border: 2px transparent solid;
+    margin: 4px;
+    outline: none;
+  }
+
+  &__save {
+    cursor: pointer;
+  }
+
+  &--unsaved {
+    .ConfigOption__input {
+      border: 2px orange solid;
+      background-color: rgb(255, 230, 184);
+    }
+  }
 }
