--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -11,6 +11,16 @@
   &__price {
     font-size: 16vw;
     text-align: center;
+
+    &--up {
+      animation-name: up;
+      animation-duration: 2s;
+    }
+
+    &--down {
+      animation-name: down;
+      animation-duration: 2s;
+    }
   }
 
   &__symbol {
@@ -21,5 +31,23 @@
 
   &__value {
     display: inline;
+  }
+}
+
+@keyframes down {
+  from {
+    color: rgb(156, 0, 0);
+  }
+  to {
+    color: #fff;
+  }
+}
+
+@keyframes up {
+  from {
+    color: rgb(0, 156, 0);
+  }
+  to {
+    color: #fff;
   }
 }
