--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -1,11 +1,27 @@
 .Ticker {
   height: 100%;
+  background-position: center center;
+  background-size: auto 80%;
+  background-repeat: no-repeat;
+  position: relative;
+
+  &::before {
+    content: "";
+    background-color: #000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.75;
+  }
 
   &__price_container {
     display: flex;
     justify-content: center;
     flex-direction: column;
     height: 100%;
+    position: relative;
   }
 
   &__price {
@@ -31,6 +47,10 @@
 
   &__value {
     display: inline;
+    text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+      -1px 1px 0 #000, 1px 1px 0 #000;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
   }
 }
 
