font & styling changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: Inter;
+  font-family: Glegoo;
   background-color: #000;
   height: 100%;
 }
