--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -25,8 +25,11 @@
   }
 
   &__price {
-    font-size: 16vw;
+    font-size: 18vw;
     text-align: center;
+    text-shadow: 0 0 20px #000;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: black;
 
     &--up {
       animation-name: up;
@@ -41,16 +44,13 @@
 
   &__symbol {
     display: inline;
-    opacity: 0.7;
+    opacity: 0.6;
     padding-right: 3rem;
+    color: rgb(255, 255, 128);
   }
 
   &__value {
     display: inline;
-    text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
-      -1px 1px 0 #000, 1px 1px 0 #000;
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: black;
   }
 }
 
