--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -5,6 +5,20 @@
   background-repeat: no-repeat;
   position: relative;
 
+  &--in {
+    .Ticker__logo {
+      animation-name: animateIn;
+      animation-duration: 0.7s;
+    }
+  }
+
+  &--out {
+    .Ticker__logo {
+      animation-name: animateOut;
+      animation-duration: 0.7s;
+    }
+  }
+
   &::before {
     content: "";
     background-color: #000;
@@ -14,6 +28,10 @@
     width: 100%;
     height: 100%;
     opacity: 0.75;
+  }
+
+  &__logo {
+    height: 100%;
   }
 
   &__price_container {
@@ -69,5 +87,23 @@
   }
   to {
     color: #fff;
+  }
+}
+
+@keyframes animateIn {
+  from {
+    filter: blur(1rem);
+  }
+  to {
+    filter: blur(0);
+  }
+}
+
+@keyframes animateOut {
+  from {
+    filter: blur(0);
+  }
+  to {
+    filter: blur(1rem);
   }
 }
