--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -1,21 +1,26 @@
 .Ticker {
   height: 100%;
-  background-position: center center;
-  background-size: auto 80%;
-  background-repeat: no-repeat;
   position: relative;
+  opacity: 1;
+  transition: all 1s;
 
   &--in {
+    animation-name: animateIn;
+    animation-duration: 0.75s;
+    opacity: 1;
+
     .Ticker__logo {
-      animation-name: animateIn;
-      animation-duration: 0.7s;
+      opacity: 0.4;
     }
   }
 
   &--out {
+    animation-name: animateOut;
+    animation-duration: 0.75s;
+    opacity: 0;
+
     .Ticker__logo {
-      animation-name: animateOut;
-      animation-duration: 0.7s;
+      opacity: 0;
     }
   }
 
@@ -31,7 +36,16 @@
   }
 
   &__logo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    opacity: 0.4;
+    transition: all 0.5s;
+    background-position: center center;
+    background-size: auto 80%;
+    background-repeat: no-repeat;
   }
 
   &__price_container {
@@ -51,12 +65,12 @@
 
     &--up {
       animation-name: up;
-      animation-duration: 2s;
+      animation-duration: 3s;
     }
 
     &--down {
       animation-name: down;
-      animation-duration: 2s;
+      animation-duration: 3s;
     }
   }
 
